	can be dropped).  at the request of an 
	extremely helpful reviewer of the JSS
	paper.

	convenience functions variable and
	variableGroups for creating simple
	data lists.  particularly useful in
	conjunction with the + and - operators
	discussed below.

	the + and - operators now have methods
	for data lists to add variables to or 
	subtract variables from a data list.

	some *slightly* better error messages.

BUG FIXES

	when the names of the variables of a data
	list were changed using the `names<-` 
	function, the corresponding names of the
	match.dimids attribute of the data list
	were left unchanged.  this bug 
	occassionally caused problems when trying 
	to use the shape argument in the 
	`[[<-.data.list` function because there is 
	a comparison between the shape argument 
	and the names of the match.dimids 
	attribute.  the bug was fixed by adding
	a specific `names<-` method for data 
	lists that explicitly changes the 
	match.dimids attribute names.

	fixed an issue with aperm.factor that 
	caused factor-valued variables in data
	lists to get out-of-order.

	fixed an internal problem with 
	make.match.dimids.  it wasn't identifying
	variables with NULL dimnames properly.

NEW DOCUMENTATION

	corrected an important error in the 
	documentation for the Extract.data.list 
	help file.  in particular the distinction
	between [[<-.default and [[<-.data.list
	is not properly described in the details
	section.

*************************************
**				   **
**	multitable version 1.2	   **
**				   **
*************************************

BUG FIXES

	the print.data.list method was printing the 
	subsetdim attribute.  this is now fixed.

	when data.list was called with a single
	data frame and matrix, an error resulted
	whenever dim matching was to be done by
	matching dimnames even if the matrix and
	data frame were compatible.  this is now
	fixed.

*************************************
**				   **
**	multitable version 1.1	   **
**				   **