@@ -14,7 +14,7 @@ dlcast(x, dimids, fill, placeholders)
   \item{placeholders}{Character vector giving elements of the \code{dimids} columns that are to be omitted.}.
 }
 \details{
-This is one of several ways to create \code{data.list} objects.  It is useful when the data are stored as several long-format \code{data.frame} objects. For the purposes of \code{dlcast}, a long-format data frame is a data frame with one named column for each variable, one named column for each dimension of replication (called \code{idvar}s in the \code{reshape2} package), and one row for each (possibly multivariate) sample.  Several data frames will allow variables to differ in their dimensions of replication.  In order to combine several data frames into a valid data list, at least one data frame must contain all of the dimensions of replication in all of the data frames.
+This is one of several ways to create \code{data.list} objects.  It is useful when the data are stored as several long-format \code{data.frame} objects. For the purposes of \code{dlcast}, a long-format data frame is a data frame with one named column for each variable, one named column for each dimension of replication (called \code{idvar}s in the \code{reshape2} package), and one row for each (possibly multivariate) sample.  Several data frames will allow variables to differ in their dimensions of replication.  In order to combine several data frames into a valid data list, at least one data frame must contain all of the dimensions of replication in all of the data frames.  Each data frame column that corresponds to a dimension of replication must be coercible to \code{\link{factor}}.
 }
 \note{
 This function is inspired by the \code{acast} function in the \code{reshape2} package by Hadley Wickham.  Levi Waldron was a great help during the writing of \code{dlcast}.  The \code{placeholders} argument arose out of a suggestion of a reviewer.}
